# headsplitter

./: README.md  pyproject.toml  setup.cfg
headsplitter/: __init__.py  cli.py  document.py  heading.py  object.py  section.py  tree.py  writer.py
mdsplitter/: __init__.py  cli.py  document.py  heading.py  section.py  tree.py  writer.py
tests/: __init__.py  conftest.py  test_cli.py  test_document.py  test_heading.py  test_section.py  test_tree.py  test_writer.py
tests/fixtures/: complex_headings.md  simple.md  simple_headings.md
use-cases/: README.md
use-cases/book/: beneath-a-midnight-sky.md
use-cases/book/beneath-a-midnight-sky/: 00-i-beneath-a-midnight-sky.md  00-ii-contents.md  00-iii-dedication.md  00-iv-preface.md  03-about-the-author.md  03-acknowledgments.md
use-cases/book/beneath-a-midnight-sky/02-beneath-a-midnight-sky/: 0-01-beneath-a-midnight-sky.md  0-02-prologue.md  1-01-00-part-one-the-shadows-we-carry.md  1-01-01-a-whisper-in-the-dark.md  1-01-02-the-weight-of-secrets.md  1-01-03-fleeting-moments.md  1-01-04-reflections-in-still-water.md  1-01-05-the-call-of-the-night.md  1-01-06-a stolen-dream.md  1-01-07-the-last-light-of-dusk.md  1-02-00-part-two-journeys-of-the-heart.md  1-02-08-paths-unseen.md  1-02-09-echoes-of-laughter.md  (+12 more)
use-cases/cookbook/: parks-family-cookbook.md
use-cases/poetry/: poetry.md
use-cases/poetry/poems/: 01-petals-in-a-forgotten-wind.md  02-echoes-of-a-silent-dawn.md  03-the-lanterns-final-glow.md
use-cases/story/: the-clockmakers-secret.md
use-cases/story/chapters/: chapter-01.md  chapter-02.md  chapter-03.md
(+14 files in other folders)
