[tool.poetry]
name = "mdsplitter"
version = "0.1.0"
description = "Split markdown files by headers."
authors = ["Alissa Huskey <alissa.huskey@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
